feat(openapi): add new endpoint which have not been added to openapi.json and then also add style webkit for checkoutmodal.jsx
