# backend/routes/visitRoutes.js
@@ -2,11 +2,12 @@
 const express = require("express");
 const router = express.Router();
 const visitController = require("../controllers/visitController");
+const verifyToken = require("../middleware/authMiddleware");
 
 // Route untuk dicatat (Public, dipanggil di Homepage)
 router.post("/", visitController.recordVisit);
 
 // Route untuk melihat data (Admin only)
-router.get("/stats", visitController.getStats);
+router.get("/stats", verifyToken, visitController.getStats);
 
 module.exports = router;
